2007-01-15  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi/Makefile.am:
	* pitivi/effects.py:
	* pitivi/timeline.py:
	* pitivi/timeline:
	* pitivi/timeline/Makefile.am:
	* pitivi/timeline/__init__.py:
	* pitivi/timeline/effects.py:
	* pitivi/timeline/timeline.py:
	Create pitivi/timeline/ directory and move timeline.py and effects.py
	into there.
	* pitivi/pitivi.py:
	* pitivi/project.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	import adjustments for timeline module location modifications.

2007-01-14  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline.py:
	Bug fixes when moving sources to the beginning position.

2007-01-14  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py:
	Forgot to add this file during the last commit.

2007-01-10  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Now depend on gst-python 0.10.6.1 for GIL lock issues in virtualmethods.
	Now depend on gnonlin-0.10.6.1 for locking issues when modifying the
	timeline.
	* pitivi/playground.py:
	(PlayGround.getCurrentTimePosition): new function for getting the time
	of the current bin.
	* pitivi/timeline.py:
	(TimelineObject.__repr__): Implement for proper representation in
	debug messages.
	(TimelineComposition.moveSource): Implement move method.
	(SimpleTimeline): Use SignalGroup for signals from the project. Add
	support for dragging sources within the timeline, and effectively
	propose moving around sources. Cleanup code a bit more.
	(SimpleTimelineSource): Add DnD support.

2007-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/gstwidget.py:
	Also take gint into account. I wonder how that one went away...

2007-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	Typo fix
	* pitivi/ui/gstwidget.py:
	Add support for GEnum in property widgets.

2007-01-08  Edward Hervey  <edward@fluendo.com>
